# IPFlow

./: .env.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IPFlow-产品说明文档.md  LICENSE  MIGRATION.md  Makefile  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  TODO.md  components.json  design_guidelines.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
backend/: .dockerignore  .env  .env.example  =4.0.0  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 20250218_add_project_and_copyright_models.py  20250219_add_organization_models.py  20260316_add_patent_trademark_billing_audit_tables.py  20260321_add_copyright_generation_jobs.py  20260322_add_patent_trademark_flow_fields.py  20260628_seed_nice_classification.py
backend/resources/schemas/: copyright_draft_output.schema.json  patent_draft_output.schema.json  trademark_draft_output.schema.json
backend/resources/skills/china-patent-application/: SKILL.md
backend/resources/skills/china-patent-application/references/: common-issues.md  requirements.md  templates.md
backend/resources/skills/china-patent-application/scripts/: patent_formatter.py
backend/resources/skills/china-trademark-application/: SKILL.md
backend/resources/skills/china-trademark-application/references/: common-issues.md  requirements.md  templates.md
backend/resources/skills/china-trademark-application/scripts/: trademark_helper.py
backend/resources/skills/patent-application/: SKILL.md
backend/resources/skills/software-copyright-application/: SKILL.md
backend/resources/skills/software-copyright-application/references/: anti-ai-detection.md  common-issues.md  requirements.md  templates.md
backend/resources/skills/software-copyright-application/scripts/: ai_trace_analyzer.py  extract_source.py
backend/resources/skills/trademark-application/: SKILL.md
backend/scripts/: dev.sh  sim_run.py
backend/src/ipflow/: __init__.py  config.py  dependencies.py  main.py
backend/src/ipflow/api/: __init__.py  deps.py
backend/src/ipflow/api/v1/: __init__.py  admin.py  ai_config.py  auth.py  compliance.py  generation_shared.py  organizations.py  payments.py  projects.py  subscriptions.py  uploads.py
backend/src/ipflow/core/: __init__.py  action_token.py  alerting.py  content_disposition.py  exceptions.py  logging.py  middleware.py  monitoring.py  rate_limit.py  security.py  tenant.py  token_blacklist.py
backend/src/ipflow/db/: __init__.py  nice_seed.py  session.py
backend/src/ipflow/models/: __init__.py  audit.py  base.py  copyright.py  enums.py  organization.py  patent.py  payment.py  project.py  subscription.py  trademark.py  user.py
backend/src/ipflow/schemas/: admin.py  copyright_generation.py  generation_repo.py  subscription.py
backend/src/ipflow/services/: __init__.py  compliance.py  email_service.py  llm_service.py  payment_service.py  quota_service.py  storage_service.py  stripe_service.py  upload_security.py
backend/src/ipflow/services/agent/: __init__.py  base.py  copyright_agent.py  models.py  patent_agent.py  trademark_agent.py
backend/src/ipflow/services/copyright/: __init__.py  ai_generator.py  background_tasks.py  claude_code_runner.py  code_processor.py  compliance_checker.py  draft_providers.py  export_generator.py  job_runner.py  source_fetcher.py
backend/src/ipflow/services/export/: __init__.py  docx_writer.py
backend/src/ipflow/services/generation/: __init__.py  code_root.py  provider_invoke.py
backend/src/ipflow/services/patents/: __init__.py  ai_generator.py  background_tasks.py  draft_providers.py  job_runner.py
backend/src/ipflow/services/payment/: __init__.py  base.py
backend/src/ipflow/services/subscriptions/: __init__.py  service.py
backend/src/ipflow/utils/: __init__.py  enums.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_auth_api.py  test_auth_verification.py  test_payments_api.py  test_stripe_webhook.py  test_subscriptions_api.py  test_trademark_compliance_api.py
backend/tests/integration/copyright/: test_export_multi_bundle.py  test_software_info.py
backend/tests/unit/: test_agent_provider.py  test_alerting.py  test_config.py  test_db.py  test_exceptions.py  test_logging.py  test_models_user.py  test_p0_security_fixes.py  test_rectification_modules.py  test_security.py  test_sim_fixes.py
backend/tests/unit/schemas/: test_copyright_generation.py
backend/tests/unit/services/: test_code_processor.py  test_stripe_service.py  test_upload_security.py
backend/tests/unit/test_models/: test_copyright.py  test_organization.py  test_project.py
(+261 files in other folders)
