[project]
name = "ipflow"
version = "2.0.0"
description = "IPFlow - 知识产权申请管理平台"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "IPFlow Team", email = "team@ipflow.app"}
]
keywords = ["ip", "copyright", "patent", "trademark", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    # Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Cache & Message Queue
    "redis>=5.2.0",
    "celery>=5.4.0",
    # Storage
    "minio>=7.2.0",
    "aiofiles>=24.1.0",
    # Utilities
    "structlog>=24.4.0",
    "orjson>=3.10.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.2.0",
    "tenacity>=9.0.0",
    # Code Processing
    "zipfile38>=0.0.3",
    "psycopg2-binary>=2.9.11",
    # HTTP Client for AI services
    "httpx>=0.28.0",
    # DOCX 导出（软著/专利/商标材料）
    "python-docx>=1.1.0",
    # pydantic-ai Agent 后端（技能驱动 + 结构化输出的草稿生成）
    "pydantic-ai>=2.0.0",
    # Stripe 支付（真实收款，Checkout Session + Webhook 验签）
    "stripe>=11.0.0",
    # 速率限制（防暴力破解、防刷量）
    "slowapi>=0.1.9",
    # 错误监控（Sentry，可选；未配置 DSN 时降级到日志/Webhook 告警）
    "sentry-sdk>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "faker>=35.0.0",
    "pytest-mock>=3.14.0",
    
    # Code Quality
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.1.0",
    
    # Debugging
    "debugpy>=1.8.0",
    "ipdb>=0.13.0",
]

[project.scripts]
ipflow = "ipflow.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipflow"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Ruff Configuration
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async
    "S",    # flake8-bandit (security)
    "C90",  # mccabe (complexity)
    "RET",  # flake8-return
]
ignore = [
    "E501", # Line too long (handled by formatter)
    "B008", # Do not perform function calls in argument defaults
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["ipflow"]

# MyPy Configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Pytest Configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src/ipflow"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 80

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.1",
]
